- Return primative - Variable name change for consistency - willReturn size of list